--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,8 @@ dependencies {
     implementation 'org.apache.tomcat.embed:tomcat-embed-core:8.5.42'
     implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:8.5.42'
 
-    implementation 'jakarta.servlet:jakarta.servlet-api:4.0.1'
-    implementation 'jakarta.servlet:jstl:1.2'
+    implementation 'javax.servlet:javax.servlet-api:4.0.1'
+    implementation 'javax.servlet:jstl:1.2'
 
     implementation 'ch.qos.logback:logback-classic:1.2.3'
 
